# Django_project

./: db.sqlite3  pyproject.toml
AI_Dietician/: settings.py  urls.py
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_details_user_photo.py  0003_details_user.py  0004_alter_details_activity_alter_details_age_and_more.py  0005_details_number_of_days.py  0006_alter_details_number_of_days.py  0007_alter_details_number_of_days.py  0008_alter_details_number_of_days.py  0009_alter_details_number_of_days.py  0010_alter_details_number_of_days.py
home/static/css/: .style.css.un~  style.css  style.css~
home/templates/: base.html  contact.html  index.html  me.html
home/templates/home/: main.html
home/utils/: diet_plan_generate.py
templates/registration/: login.html  registration.html
